# lsi

./: 64x10k.txt  Cargo.toml  Justfile  README.md
benches/: main.rs
data/: 64x10k.txt
src/: lib.rs
