[package]
name = "fast_intered_string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]
#default = ["ctor"]

[[bench]]
name = "main"
harness = false

[dependencies]
hashbrown = { version = "0.14.3", features = ["raw"] }
ahash = "0.8.6"

[dev-dependencies]
criterion = "0.5.1"
