[package]
name = "lsi"
version = "0.1.0"
edition = "2021"
description = "A leaking string interner. In return for leaking, you get ludicrous speed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]
#default = ["ctor"]

[[bench]]
name = "main"
harness = false

[dependencies]
ahash = "0.8.6"
hashbrown = { version = "0.14.3", features = ["raw"] }

[dev-dependencies]
criterion = "0.5.1"
string-interner = "0.14.0"
lasso = "0.7.2"
ustr = "0.10.0"
intaglio = "1.9.1"

